Add sbt native packager for building docker images